--- a/phase_1/week_12/11_29/hard_coding_problem.ipynb
+++ b/phase_1/week_12/11_29/hard_coding_problem.ipynb
@@ -29,7 +29,9 @@
     "Input: nums = [7,8,9,11,12]\n",
     "Output: 1\n",
     "Explanation: The smallest positive integer 1 is missing.\n",
-    "```"
+    "```\n",
+    "\n",
+    "Submit here: https://leetcode.com/problems/first-missing-positive/"
    ]
   },
   {
