--- a/phase_1/week_12/11_29/med_coding_problem.ipynb
+++ b/phase_1/week_12/11_29/med_coding_problem.ipynb
@@ -28,7 +28,9 @@
     "```\n",
     "Input: digits = \"2\"\n",
     "Output: [\"a\",\"b\",\"c\"]\n",
-    "```"
+    "```\n",
+    "\n",
+    "Submit here: https://leetcode.com/problems/letter-combinations-of-a-phone-number/"
    ]
   },
   {
