Added practice code

--- a/phase_2/week_1/12_6/interm_stats_II_practice.ipynb
+++ b/phase_2/week_1/12_6/interm_stats_II_practice.ipynb
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dark Mode vs Light Mode\n",
+    "## Internet Vs Higher Education\n",
     "\n",
     "We have a theory that teenage students who have access to the internet also have aspirations in higher education. \n",
     "\n",
@@ -197,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q4\n",
+    "## Q9\n",
     "\n",
     "Observe the p-value of our t-test. Is this p-value significant using the standard of `< 0.05`?\n",
     "\n"
@@ -239,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q5\n",
+    "## Q10\n",
     "\n",
     "Based on this p-value, can we reject our null hypothesis?\n",
     "\n"
