--- a/phase_2/week_1/12_6/interm_stats_II_practice.ipynb
+++ b/phase_2/week_1/12_6/interm_stats_II_practice.ipynb
@@ -33,8 +33,7 @@
    "source": [
     "## Q1\n",
     "\n",
-    "What is the null hypothesis of this experiment?\n",
-    "\n"
+    "What is the null hypothesis of this experiment?\n"
    ]
   },
   {
@@ -43,8 +42,7 @@
    "source": [
     "## Q2\n",
     "\n",
-    "What is the alternative hypothesis of this experiment?\n",
-    "\n"
+    "What is the alternative hypothesis of this experiment?\n"
    ]
   },
   {
@@ -77,7 +75,8 @@
     "## Q4\n",
     "\n",
     "Observe the p-value of our t-test. Is this p-value significant using the standard of `< 0.05`?\n",
-    "\n"
+    "\n",
+    "This is not significant because it is more than 0.05"
    ]
   },
   {
@@ -106,10 +105,10 @@
     "darkmode = df[df[\"Dark_Mode\"] == 1]\n",
     "nonmode = df[df[\"Dark_Mode\"] == 0]\n",
     "\n",
-    "pro = darkmode[\"Proficiency\"].to_list()\n",
-    "no_pro = nonmode[\"Proficiency\"].to_list()\n",
+    "dark = darkmode[\"Proficiency\"].to_list() # [1, 1, 1, 0, 0, 0 , 1, 1]\n",
+    "non_dark = nonmode[\"Proficiency\"].to_list() # [1, 0, 1, 0, 0, 0 , 1, 1]\n",
     "\n",
-    "stats.ttest_ind(a=pro,b=no_pro)"
+    "stats.ttest_ind(a=dark,b=non_dark)"
    ]
   },
   {
@@ -178,7 +177,8 @@
     "\n",
     "What kind of t-test should we do for this experiment?\n",
     "\n",
-    "Uncomment the print function that is correct."
+    "Uncomment the print function that is correct.\n",
+    "\n"
    ]
   },
   {
@@ -188,9 +188,9 @@
    "outputs": [],
    "source": [
     "# print(\"One Sample T-Test\")\n",
-    "# print(\"Two Sample T-Test\")\n",
+    "# print(\"Two Sample T-Test\") # small data (30 data points, 50 data points)\n",
     "# print(\"Paired T-Test\")\n",
-    "# print(\"Z-Test\")"
+    "# print(\"Z-Test\") # large data (100s of data points)"
    ]
   },
   {
@@ -229,10 +229,10 @@
     "inter = df[df[\"internet\"] == 1]\n",
     "no_inter = df[df[\"internet\"] == 0]\n",
     "\n",
-    "higher = inter[\"higher\"].to_list()\n",
-    "no_higher = no_inter[\"higher\"].to_list()\n",
+    "inter = inter[\"higher\"].to_list()\n",
+    "no_inter = no_inter[\"higher\"].to_list()\n",
     "\n",
-    "stats.ttest_ind(a=higher,b=no_higher)"
+    "stats.ttest_ind(a=inter,b=no_inter)"
    ]
   },
   {
@@ -241,7 +241,7 @@
    "source": [
     "## Q10\n",
     "\n",
-    "Based on this p-value, can we reject our null hypothesis?\n",
+    "Based on this p-value, can we reject our null hypothesis? \n",
     "\n"
    ]
   }
