Changed peaks to tails

--- a/phase_2/week_1/Lab/intermediate_stats_lab.ipynb
+++ b/phase_2/week_1/Lab/intermediate_stats_lab.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "## Q3\n",
     "\n",
-    "What do thicker peaks indicate about our dataset?\n",
+    "What do thicker tails indicate about our dataset?\n",
     "\n",
     "Uncomment the line of code that contains the correct answer."
    ]
@@ -84,7 +84,7 @@
    "source": [
     "## Q4\n",
     "\n",
-    "What do thinner peaks indicate about our dataset?\n",
+    "What do thinner tails indicate about our dataset?\n",
     "\n",
     "Uncomment the line of code that contains the correct answer."
    ]
@@ -261,7 +261,7 @@
     "...\n",
     "```\n",
     "\n",
-    "For questions 11-13, answer the following questions regarding hypothesis, error, and p-value."
+    "For questions 11-14, answer the following questions regarding hypothesis, error, and p-value."
    ]
   },
   {
