Added practice code

--- a/phase_2/week_2/12_12/pandas_exercise.ipynb
+++ b/phase_2/week_2/12_12/pandas_exercise.ipynb
@@ -1,11 +1,217 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Top Movies DataSet\n",
+    "\n",
+    "Using the top movies dataset located in `week_2/data/top_movies.csv`, implement the following lines of pseudocode below for each code block.\n",
+    "\n",
+    "For some lines of pseudocode you will have to utilize your searching skills to figure out which method we need. Consult google or the [pandas docs](https://pandas.pydata.org/) to accomplish this.\n",
+    "\n",
+    "Notice that this data is sorted according to movie rank in descending order. \n",
+    "\n",
+    "Afterwards, answer questions 1 through 5 using the information gained."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# read in your csv data using pandas\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print out the first 5 rows of your data \n",
+    "# hint: https://pythonexamples.org/pandas-dataframe-head-get-first-n-rows/\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print out the last 5 rows of your data\n",
+    "# hint: https://stackoverflow.com/questions/14663004/how-to-get-the-last-n-rows-of-a-pandas-dataframe\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# display the column name, column type, and how many null values you have in your dataframe \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print out summary statistics of your dataframe\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q1\n",
+    "\n",
+    "Which movie has the highest ranking in this dataset?\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q2\n",
+    "\n",
+    "Which movie has the lowest ranking in this dataset?\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q3\n",
+    "\n",
+    "What is the average movie rating in this dataset?\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q4\n",
+    "\n",
+    "In what year was the oldest movie in this dataset released?\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q5\n",
+    "\n",
+    "In what year was the newest movie in this dataset released?\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## State GDP Analysis\n",
+    "\n",
+    "Using the states gdp dataset located in `week_2/data/state_gdp.csv`, implement the following lines of pseudocode below for each code block.\n",
+    "\n",
+    "For some lines of pseudocode you will have to utilize your searching skills to figure out which method we need. Consult google or the [pandas docs](https://pandas.pydata.org/) to accomplish this.\n",
+    "\n",
+    "Afterwards, answer questions 6 through 10 using the information gained."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# load dataframe here\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get dimensions of dataframe\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get summary statistics of dataframe"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q6\n",
+    "\n",
+    "How many rows does this dataframe contain?\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q7\n",
+    "\n",
+    "How many columns does this dataframe contain?\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q8\n",
+    "\n",
+    "What was the maximum GDP for 2003?\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q9\n",
+    "\n",
+    "What was the minimum GDP for 2003?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q10\n",
+    "\n",
+    "What was the mean GDP for 2003?"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +221,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.7"
   },
   "orig_nbformat": 4,
