--- a/phase_2/week_2/12_12/pandas_notes.ipynb
+++ b/phase_2/week_2/12_12/pandas_notes.ipynb
@@ -704,6 +704,16 @@
     "df = pd.read_csv(\"../data/top_movies.csv\")\n",
     "# loop using iterrows\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "* "
+   ]
   }
  ],
  "metadata": {
