--- a/phase_2/week_2/12_12/pandas_notes.ipynb
+++ b/phase_2/week_2/12_12/pandas_notes.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -36,15 +36,13 @@
        "[1, 2, 3, 5, 4, 9, 8, 1, 3, 4]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tups = [(1, 2), (3, 5), (4, 9), (8, 1), (3, 4)]\n",
-    "\n",
-    "# write code here\n"
+    "tups = [(1, 2), (3, 5), (4, 9), (8, 1), (3, 4)]\n"
    ]
   },
   {
@@ -156,20 +154,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Quantity</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OrderID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Humidifer</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mug</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Lamp</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Name  Quantity\n",
+       "OrderID                     \n",
+       "0        Humidifer         1\n",
+       "1              Mug         4\n",
+       "2             Lamp         1"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import pandas as pd\n",
     "# Firstly, let’s create a list of 3 lists:\n",
-    "\n",
+    "orders = [[0, \"Humidifer\", 1], [1, \"Mug\", 4], [2, \"Lamp\", 1]]\n",
     "\n",
     "# Next, let’s create a list of column names.\n",
-    "\n",
+    "names = [\"OrderID\", \"Name\", \"Quantity\"]\n",
     "\n",
     "# Let’s combine these two data structures into a DataFrame to get the following data-structure.\n",
+    "df = pd.DataFrame(orders, columns = names)\n",
     "\n",
-    "\n",
-    "# set its index.\n"
+    "# set its index.\n",
+    "df.set_index(\"OrderID\", inplace=True)"
    ]
   },
   {
@@ -203,19 +266,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unmatched '}' (2525725143.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [2]\u001b[1;36m\u001b[0m\n\u001b[1;33m    data = { \"OrderID\": [0, 1, 2], \"Name\": [] , \"\": }[0, \"Humidifer\", 1], [1, \"Mug\", 4], [2, \"Lamp\", 1] }\u001b[0m\n\u001b[1;37m                                                                                                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unmatched '}'\n"
+     ]
+    }
+   ],
    "source": [
     "# Firstly, let’s create a dictionary where each column is a string key, and each value is a \n",
     "# list describing the data in our column.\n",
-    "\n",
+    "data = { \"OrderID\": [0, 1, 2], \"Name\": [\"Humidifer\", \"Mug\", \"Lamp\"] , \"Quantity\":[1, 4, 1] }\n",
     "\n",
     "# We simply pass this dictionary into our DataFrame.\n",
-    "\n",
+    "df = pd.DataFrame()\n",
     "\n",
     "# how do we set its index?\n",
-    "\n"
+    "df.set_index(\"OrderID\", inplace=True)\n"
    ]
   },
   {
@@ -230,12 +302,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Movie_Name</th>\n",
+       "      <th>Release_date</th>\n",
+       "      <th>Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Shawshank Redemption</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>9.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>9.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The Godfather Part II</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12 Angry Men</td>\n",
+       "      <td>1957</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>245</th>\n",
+       "      <td>Dersu Uzala</td>\n",
+       "      <td>1975</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>246</th>\n",
+       "      <td>Aladdin</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>The Help</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>248</th>\n",
+       "      <td>The Iron Giant</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>249</th>\n",
+       "      <td>Gandhi</td>\n",
+       "      <td>1982</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>250 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Movie_Name  Release_date  Rating\n",
+       "0    The Shawshank Redemption          1994     9.2\n",
+       "1               The Godfather          1972     9.2\n",
+       "2             The Dark Knight          2008     9.0\n",
+       "3       The Godfather Part II          1974     9.0\n",
+       "4                12 Angry Men          1957     9.0\n",
+       "..                        ...           ...     ...\n",
+       "245               Dersu Uzala          1975     8.0\n",
+       "246                   Aladdin          1992     8.0\n",
+       "247                  The Help          2011     8.0\n",
+       "248            The Iron Giant          1999     8.0\n",
+       "249                    Gandhi          1982     8.0\n",
+       "\n",
+       "[250 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# load in csv file\n",
-    "\n"
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"../data/top_movies.csv\")\n",
+    "df\n"
    ]
   },
   {
@@ -271,21 +465,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(250, 3)\n",
+      "Index(['Movie_Name', 'Release_date', 'Rating'], dtype='object')\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 250 entries, 0 to 249\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Movie_Name    250 non-null    object \n",
+      " 1   Release_date  250 non-null    int64  \n",
+      " 2   Rating        250 non-null    float64\n",
+      "dtypes: float64(1), int64(1), object(1)\n",
+      "memory usage: 6.0+ KB\n",
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Release_date</th>\n",
+       "      <th>Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>250.000000</td>\n",
+       "      <td>250.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1986.488000</td>\n",
+       "      <td>8.252800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>25.225287</td>\n",
+       "      <td>0.236125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1921.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1966.250000</td>\n",
+       "      <td>8.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1994.000000</td>\n",
+       "      <td>8.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2006.750000</td>\n",
+       "      <td>8.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2022.000000</td>\n",
+       "      <td>9.200000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Release_date      Rating\n",
+       "count    250.000000  250.000000\n",
+       "mean    1986.488000    8.252800\n",
+       "std       25.225287    0.236125\n",
+       "min     1921.000000    8.000000\n",
+       "25%     1966.250000    8.100000\n",
+       "50%     1994.000000    8.200000\n",
+       "75%     2006.750000    8.400000\n",
+       "max     2022.000000    9.200000"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# print out dimensions of your data\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"../data/top_movies.csv\")\n",
     "\n",
+    "# print out dimensions of your data\n",
+    "print(df.shape)\n",
     "\n",
     "# print out columns of your data\n",
-    "\n",
+    "print(df.columns)\n",
     "\n",
     "# get info on your data\n",
-    "\n",
+    "print(df.info())\n",
     "\n",
     "# get summary statistics on your data\n",
-    "\n"
+    "df.describe()"
    ]
   },
   {
@@ -329,13 +632,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Movie_Name      The Dark Knight\n",
+       "Release_date               2008\n",
+       "Rating                      9.0\n",
+       "Name: 2, dtype: object"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = [\"Hyundai\", \"Honda\", \"BMW\", \"Toyota\", \"Ford\", \"Chevrolet\"]\n",
     "\n",
-    "# how do I get the 3rd element?"
+    "# how do I get the 3rd element?\n",
+    "\n",
+    "x[2]"
    ]
   },
   {
@@ -348,9 +667,10 @@
     "df = pd.read_csv(\"../data/top_movies.csv\")\n",
     "\n",
     "# get the 3rd row of this df\n",
+    "df.iloc[2]\n",
     "\n",
-    "\n",
-    "# get the 3rd row of the \"Movie_Name\" column\n"
+    "# get the 3rd row of the \"Movie_Name\" column\n",
+    "df.iloc[2, \"Movie_Name\"]"
    ]
   },
   {
@@ -365,16 +685,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[24000, 11000, 27000]"
+       "0      The Shawshank Redemption\n",
+       "1                 The Godfather\n",
+       "2               The Dark Knight\n",
+       "3         The Godfather Part II\n",
+       "4                  12 Angry Men\n",
+       "                 ...           \n",
+       "245                 Dersu Uzala\n",
+       "246                     Aladdin\n",
+       "247                    The Help\n",
+       "248              The Iron Giant\n",
+       "249                      Gandhi\n",
+       "Name: Movie_Name, Length: 250, dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +721,8 @@
     "    \"status\": [\"used\", \"used\", \"used\"]\n",
     "}\n",
     "\n",
-    "# how do I get the price list?"
+    "# how do I get the price list?\n",
+    "data[\"price\"]"
    ]
   },
   {
@@ -403,7 +735,7 @@
     "df = pd.read_csv(\"../data/top_movies.csv\")\n",
     "\n",
     "# get the \"Movie_Name\" column\n",
-    "\n"
+    "df[\"Movie_Name\"]\n"
    ]
   },
   {
@@ -440,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -702,17 +1034,9 @@
    ],
    "source": [
     "df = pd.read_csv(\"../data/top_movies.csv\")\n",
-    "# loop using iterrows\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## References\n",
-    "\n",
-    "* "
+    "# loop using iterrows\n",
+    "for index, row in df.iterrows():\n",
+    "    print(row[\"Movie_Name\"])"
    ]
   }
  ],
