Added exervise & readme

--- a/phase_2/week_2/12_13/pandas_II_practice.ipynb
+++ b/phase_2/week_2/12_13/pandas_II_practice.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "For some lines of pseudocode you will have to utilize your searching skills to figure out which method we need. Consult google or the [pandas docs](https://pandas.pydata.org/) to accomplish this.\n",
     "\n",
-    "Afterwards, answer questions 1 through 10 using the information gained."
+    "Afterwards, answer questions 1 through 4 using the information gained."
    ]
   },
   {
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print out the len of this dataframe"
+    "# print out the len of this dataframe\n"
    ]
   },
   {
