--- a/phase_2/week_2/12_13/pandas_II_notes.ipynb
+++ b/phase_2/week_2/12_13/pandas_II_notes.ipynb
@@ -591,7 +591,7 @@
     }
    ],
    "source": [
-    "movies = df[df[\"kind\"] == \"movie\"]\n",
+    "movies = df[df[\"kind\"] == \"tv series\"]\n",
     "movies"
    ]
   },
@@ -1371,7 +1371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
