--- a/phase_1/week_12/11_28/objects_review.ipynb
+++ b/phase_1/week_12/11_28/objects_review.ipynb
@@ -136,7 +136,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.7"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
