--- a/phase_2/week_2/12_13/pandas_II_notes.ipynb
+++ b/phase_2/week_2/12_13/pandas_II_notes.ipynb
@@ -158,16 +158,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>year</th>\n",
+       "      <th>kind</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>vote</th>\n",
+       "      <th>country</th>\n",
+       "      <th>language</th>\n",
+       "      <th>cast</th>\n",
+       "      <th>director</th>\n",
+       "      <th>composer</th>\n",
+       "      <th>writer</th>\n",
+       "      <th>runtime</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Dinosaur Planet</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>tv mini series</td>\n",
+       "      <td>['Documentary', 'Animation', 'Family']</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>474.0</td>\n",
+       "      <td>['United States']</td>\n",
+       "      <td>['English']</td>\n",
+       "      <td>['Christian Slater', 'Scott Sampson']</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>['Mike Carrol', 'Mike Carroll', 'Georgann Kane']</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Get Up and Dance!</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>video movie</td>\n",
+       "      <td>['Family']</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>['United States']</td>\n",
+       "      <td>['English']</td>\n",
+       "      <td>['Paula Abdul', 'Aurorah Allain', 'Bill Bohl',...</td>\n",
+       "      <td>['Steve Purcell']</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>83.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8 Man</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>['Action', 'Sci-Fi']</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>['Japan']</td>\n",
+       "      <td>['Japanese']</td>\n",
+       "      <td>['Kai Shishido', 'Etsushi Takahashi', 'Sachiko...</td>\n",
+       "      <td>['Yasuhiro Horiuchi']</td>\n",
+       "      <td>['Carole King']</td>\n",
+       "      <td>['Kazumasa Hirai', 'Jirô Kuwata', 'Junko Suzuki']</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>What the #$*! Do We (K)now!?</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>['Documentary', 'Comedy', 'Drama', 'Fantasy', ...</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>13432.0</td>\n",
+       "      <td>['United States']</td>\n",
+       "      <td>['English', 'German', 'Spanish']</td>\n",
+       "      <td>['Marlee Matlin', 'Elaine Hendrix', 'John Ross...</td>\n",
+       "      <td>['William Arntz', 'Betsy Chasse', 'Mark Vicente']</td>\n",
+       "      <td>['Christopher Franke']</td>\n",
+       "      <td>['William Arntz', 'Betsy Chasse', 'Matthew Hof...</td>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Class of Nuke 'Em High Part II: Subhumanoid Me...</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>movie</td>\n",
+       "      <td>['Comedy', 'Horror', 'Sci-Fi']</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2177.0</td>\n",
+       "      <td>['United States']</td>\n",
+       "      <td>['English']</td>\n",
+       "      <td>['Brick Bronsky', 'Lisa Gaye', 'Leesa Rowland'...</td>\n",
+       "      <td>['Eric Louzil']</td>\n",
+       "      <td>['Bob Mithoff']</td>\n",
+       "      <td>['Lloyd Kaufman', 'Carl Morano', 'Matt Unger']</td>\n",
+       "      <td>96.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "8451"
+       "                                                   title  year  \\\n",
+       "index                                                            \n",
+       "0                                        Dinosaur Planet  2003   \n",
+       "1                                      Get Up and Dance!  1994   \n",
+       "2                                                  8 Man  1992   \n",
+       "3                           What the #$*! Do We (K)now!?  2004   \n",
+       "4      Class of Nuke 'Em High Part II: Subhumanoid Me...  1991   \n",
+       "\n",
+       "                 kind                                              genre  \\\n",
+       "index                                                                      \n",
+       "0      tv mini series             ['Documentary', 'Animation', 'Family']   \n",
+       "1         video movie                                         ['Family']   \n",
+       "2               movie                               ['Action', 'Sci-Fi']   \n",
+       "3               movie  ['Documentary', 'Comedy', 'Drama', 'Fantasy', ...   \n",
+       "4               movie                     ['Comedy', 'Horror', 'Sci-Fi']   \n",
+       "\n",
+       "       rating     vote            country                          language  \\\n",
+       "index                                                                         \n",
+       "0         7.7    474.0  ['United States']                       ['English']   \n",
+       "1         8.1     18.0  ['United States']                       ['English']   \n",
+       "2         5.5     93.0          ['Japan']                      ['Japanese']   \n",
+       "3         5.3  13432.0  ['United States']  ['English', 'German', 'Spanish']   \n",
+       "4         4.5   2177.0  ['United States']                       ['English']   \n",
+       "\n",
+       "                                                    cast  \\\n",
+       "index                                                      \n",
+       "0                  ['Christian Slater', 'Scott Sampson']   \n",
+       "1      ['Paula Abdul', 'Aurorah Allain', 'Bill Bohl',...   \n",
+       "2      ['Kai Shishido', 'Etsushi Takahashi', 'Sachiko...   \n",
+       "3      ['Marlee Matlin', 'Elaine Hendrix', 'John Ross...   \n",
+       "4      ['Brick Bronsky', 'Lisa Gaye', 'Leesa Rowland'...   \n",
+       "\n",
+       "                                                director  \\\n",
+       "index                                                      \n",
+       "0                                                    NaN   \n",
+       "1                                      ['Steve Purcell']   \n",
+       "2                                  ['Yasuhiro Horiuchi']   \n",
+       "3      ['William Arntz', 'Betsy Chasse', 'Mark Vicente']   \n",
+       "4                                        ['Eric Louzil']   \n",
+       "\n",
+       "                     composer  \\\n",
+       "index                           \n",
+       "0                         NaN   \n",
+       "1                         NaN   \n",
+       "2             ['Carole King']   \n",
+       "3      ['Christopher Franke']   \n",
+       "4             ['Bob Mithoff']   \n",
+       "\n",
+       "                                                  writer  runtime  \n",
+       "index                                                              \n",
+       "0       ['Mike Carrol', 'Mike Carroll', 'Georgann Kane']     50.0  \n",
+       "1                                                    NaN     83.0  \n",
+       "2      ['Kazumasa Hirai', 'Jirô Kuwata', 'Junko Suzuki']      NaN  \n",
+       "3      ['William Arntz', 'Betsy Chasse', 'Matthew Hof...     60.0  \n",
+       "4         ['Lloyd Kaufman', 'Carl Morano', 'Matt Unger']     96.0  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,8 +365,7 @@
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv(\"../data/imdb_processed.csv\", index_col=0)\n",
-    "df.head()\n",
-    "len(df)"
+    "df.head()"
    ]
   },
   {
@@ -1371,7 +1559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
