--- a/phase_2/week_3/assessment/end_of_phase1_assessment.ipynb
+++ b/phase_2/week_3/assessment/end_of_phase1_assessment.ipynb
@@ -28,7 +28,7 @@
     "* [Q4-Q5 Review](https://drive.google.com/file/d/1UAJYAiG2g4FRSb71xDVufd-Olc7y4DEo/view?usp=share_link)\n",
     "* [Q6-Q7 Review](https://drive.google.com/file/d/1Hs-jBhcyS6KEl6D83cJx7zAZb8__lUWz/view?usp=share_link)\n",
     "* [Q8-Q9 Review](https://drive.google.com/file/d/1HhfjFHDSCv0ge82Le7XO44tFfioA4iRU/view?usp=share_link)\n",
-    "* [Q10 Review]()\n",
+    "* [Q10 Review](https://drive.google.com/file/d/103UIBYUKJczN4AubJt7ZcktLOqMAp_Rn/view?usp=share_link)\n",
     "\n",
     "Once completed, submit to the following link by December 23, 2022: \n",
     "\n",
